UGH... removing large hl block because apparently multi-page hl breaks page numbering?? wat?

--- a/4T/ch11.tex
+++ b/4T/ch11.tex
@@ -478,9 +478,9 @@ Dr. Gerhauser asks how Jaya is doing and she says that she's feeling much better
 
 Dr. Gerhauser takes Jaya's blood pressure and tells her to lie down on the examination bench.  She places the cap on Jaya's head and instructs her, ``Answer with whatever comes to your head, which shouldn't be a problem for you.''
 
-\hl{``How old are you?'' begins Dr. Gerhauser.
+`How old are you?'' begins Dr. Gerhauser.
 
-``24.  I think.  I don't think I'm 25.  I know I'm not 23. I remember }\underline{\hl{\textit{that}}}\hl{ birthday,'' says Jaya with a grin.
+``24.  I think.  I don't think I'm 25.  I know I'm not 23. I remember \underline{\textit{that}} birthday,'' says Jaya with a grin.
 
 ``Rank?''
 
@@ -556,9 +556,9 @@ Jaya counts carefully on her fingers and proudly proclaims, ``40!''
 
 ``I'm not actually going to pay you, I just wanted see what the answer to \textit{that} question was.''
 
-There is more bickering and Jaya being petulant.  Somehow she works in ``What are }\underline{\hl{ \textit{you} }}\hl{ afraid of?''
+There is more bickering and Jaya being petulant.  Somehow she works in ``What are \underline{\textit{you} } afraid of?''
 
-``Suffocation,'' answers Dr. Gerhauser with surprising frankness.  Jaya responds with ``I'll remember that'' and they then continues with the questions.  ``How do you feel about needles?''}\footnote{\textbf{Rebecca S. }Look at all these character details I don't remember coming up with... Huh... 
+``Suffocation,'' answers Dr. Gerhauser with surprising frankness.  Jaya responds with ``I'll remember that'' and they then continues with the questions.  ``How do you feel about needles?''\footnote{\textbf{Rebecca S. }Look at all these character details I don't remember coming up with... Huh... 
 Also, that final note about Gerhauser being afraid of suffocation is muuuuuch more interesting given how Oliver got snuffed out. \textsubscript{11/17/14 5:42pm}}\footnote{$\rightarrow$\textbf{Suko T }Ooo indeed!  Very interesting. \textsubscript{11/18/14 2:52am}}
 
 ``Well I prefer the \hl{larger gauge}\footnote{\textbf{Rebecca S. }Sadly I didn't know what I was talking about during session.  Corrected it in the notes.  Large gauge =\textgreater  tiny needle.  Small gauge =\textgreater  big needle. \textsubscript{11/30/12 9:22am}}\footnote{$\rightarrow$\textbf{Suko T }Huh, I didn't know that either.  I hate it when they do the backwards thing. \textsubscript{11/30/12 11:37am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Not backwards, just the divisor. \textsubscript{05/06/15 4:24pm}}ones of course, but I can handle the smaller gauge if the end is worth it,'' says Jaya with the voice of experience.
