Cleaned up errors in ch15 and added first image to the doc. Fixed page to warn in the problems field if there's an image

--- a/4T/ch15.tex
+++ b/4T/ch15.tex
@@ -309,7 +309,7 @@ Hayley and Jonah reach the building first and Hayley contemplates the door and t
 
 
 
-Jonah, alarmed, can hardly wrap his mind around what happens next. {[}\textit{Challenge: ``No way that could have happened'' 2. Overcome}{]}.  Back in the war, when artillery was falling, there would be a particular sound and a flash of purple light.  Jonah sees that same purple light flash, and suddenly a figure is there\footnote{\textbf{q.google }To be explicitly clear: Jonah has no idea what \_actually\_ happened there.  He won't even really remember the flash or mention it in all likelihood until after it's over (possibly during debrief). \textsubscript{01/31/13 1:26pm}}, dressed in dark matte grey body armor.  It is full heavy body armor, with a black faceplate.  It's hard to tell even if they are male or female. They are holding a rifle, loaded for bear, and moving as if they are slowing down from a run.  Jonah is certain of only one thing: someone hostile has approached.  \hl{He yells ``Incoming!''}\footnote{\textbf{q.google }This is actually what you yell when bombs are being dropped.  The purple flash has registered on him that much. \textsubscript{01/31/13 1:29pm}} and drops telling Hayley to get down, although he has to order her to abandon the door she is about to enter.
+Jonah, alarmed, can hardly wrap his mind around what happens next. {[}\textit{Challenge: ``No way that could have happened'' 2. Overcome}{]}.  Back in the war, when artillery was falling, there would be a particular sound and a flash of purple light.  \hl{Jonah sees that same purple light flash, and suddenly a figure is there}\footnote{\textbf{q.google }To be explicitly clear: Jonah has no idea what \_actually\_ happened there.  He won't even really remember the flash or mention it in all likelihood until after it's over (possibly during debrief). \textsubscript{01/31/13 1:26pm}}, dressed in dark matte grey body armor.  It is full heavy body armor, with a black faceplate.  It's hard to tell even if they are male or female. They are holding a rifle, loaded for bear, and moving as if they are slowing down from a run.  Jonah is certain of only one thing: someone hostile has approached.  \hl{He yells ``Incoming!''}\footnote{\textbf{q.google }This is actually what you yell when bombs are being dropped.  The purple flash has registered on him that much. \textsubscript{01/31/13 1:29pm}} and drops telling Hayley to get down, although he has to order her to abandon the door she is about to enter.
 
 
 
@@ -321,9 +321,7 @@ Jaya realizes she's near the row of bodies and decides to just yank one of the b
 
 
 
-Jaya sees three bodies, two of them old ladies, one of them a young boy.  \hl{All of them were shot in the head.}\footnote{\textbf{q.google }While this doesn't rule out the presence of plague, it does seem unlikely that plague would produce gunshot wounds to the front of the skull. \textsubscript{01/31/13 1:33pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It was Darth Plagius \textsubscript{01/31/13 4:19pm}}+1  They have been decaying for a while so she can see where the skull has collapsed from the front, showing the exact impact of the shot.
-
-
+Jaya sees three bodies, two of them old ladies, one of them a young boy.  \hl{All of them were shot in the head.}\footnote{\textbf{q.google }While this doesn't rule out the presence of plague, it does seem unlikely that plague would produce gunshot wounds to the front of the skull. \textsubscript{01/31/13 1:33pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It was Darth Plagius \textsubscript{01/31/13 4:19pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{01/31/13 4:54pm}} They have been decaying for a while so she can see where the skull has collapsed from the front, showing the exact impact of the shot.
 
 ``\hl{Get to cover you stupid bitch}\footnote{\textbf{q.google }To be fair it's really not clear how Jaya is going to get to cover without exposing herself to fire.  Getting down near any solid object might be the best choice in that instant. \textsubscript{01/31/13 1:34pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Sure, but bodies aren't that much cover; and they seem like even less cover when you yourself are standing relatively close; the height differential seems meaningless from a high angle \textsubscript{01/31/13 4:20pm}}\footnote{$\rightarrow$\textbf{Suko T }And there were several buildings right there behind her. \textsubscript{01/31/13 4:55pm}}!'' yells Lackovich as Jaya stares at the bodies.
 
@@ -367,7 +365,7 @@ Down on the street, Jaya is having trouble coping with cuddling with corpses. {[
 
 
 
-Two more figures appear, also looking like they had been running.  One has a bigger gun and he kneels down, facing in Jaya\footnote{\textbf{Nathaniel Ford }He never headed for Jaya, just faced her direction and knelt. \textsubscript{01/31/13 2:10am}}'s direction.  The guy with the smaller weapon heads off to the side (the side where Jonah, Oliver, Hayley and Lackovich are) and disappears behind some buildings.
+Two more figures appear, also looking like they had been running.  \hl{One has a bigger gun and he kneels down, facing in Jaya}\footnote{\textbf{Nathaniel Ford }He never headed for Jaya, just faced her direction and knelt. \textsubscript{01/31/13 2:10am}}'s direction.  The guy with the smaller weapon heads off to the side (the side where Jonah, Oliver, Hayley and Lackovich are) and disappears behind some buildings.
 
 
 
@@ -397,7 +395,7 @@ Jaya ignores her but pauses to reload her sidearm {[}\textit{Refresh: Sidearm 3}
 
 ``Where are you?'' asks Lackovich again.
 
-Jaya turns off her radio {[}\textit{Refresh: Senior Constable 2}{]}\footnote{\textbf{Suko T }technically this happened later but it saves me some typing and make the flow better to put it here \textsubscript{01/31/13 12:49am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{01/31/13 4:22pm}}
+Jaya turns off her radio \hl{{[}\textit{Refresh: Senior Constable 2}{]}}\footnote{\textbf{Suko T }technically this happened later but it saves me some typing and make the flow better to put it here \textsubscript{01/31/13 12:49am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{01/31/13 4:22pm}}
 
 
 
@@ -501,29 +499,11 @@ Oliver 2
 
 
 
-\hl{}\footnote{\textbf{Suko T }Ooo a battle map!  Pretty sweet. \textsubscript{01/31/13 5:41pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }I like how Lackovich is purple... suggesting half ``good team'', half ``bad team''.  Should we take this as foreshadowing? ;) \textsubscript{02/03/13 12:10am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Ahahaha. No comment. \textsubscript{02/07/13 4:45pm}}+1
+
+\includegraphics[width=8cm]{img/ch15_battle_map.png}
+\footnote{\textbf{Suko T }Ooo a battle map!  Pretty sweet. \textsubscript{01/31/13 5:41pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }I like how Lackovich is purple... suggesting half ``good team'', half ``bad team''.  Should we take this as foreshadowing? ;) \textsubscript{02/03/13 12:10am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Ahahaha. No comment. \textsubscript{02/07/13 4:45pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{02/14/13 1:32am}}
 
 
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: To be explicitly clear: Jonah has no idea what _actually_ happened there.  He won't even really remember the flash or mention it in all likelihood until after it's over (possibly during debrief)., unable to correctly match (exceeded acceptable limit):ExpectedJonah sees that same purple light flash, and suddenly a figure is there
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Nathaniel Ford }It was Darth Plagius \textsubscript{01/31/13 4:19pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{02/14/13 1:32am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{01/31/13 4:54pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{01/31/13 4:22pm}} 
-
-	Unable to highlight for footnote: He never headed for Jaya, just faced her direction and knelt. because:GivenExpectedOne has a bigger gun and he kneels down, facing in JayaOne has a bigger gun and he starts heading down the street toward Jaya
-
-	Unable to highlight for footnote: technically this happened later but it saves me some typing and make the flow better to put it here, unable to correctly match (exceeded acceptable limit):Expected[Refresh: Senior Constable 2]
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Nathaniel Ford }Ahahaha. No comment. \textsubscript{02/07/13 4:45pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{02/14/13 1:32am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{01/31/13 4:54pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{01/31/13 4:22pm}} 
-
-
-\fi
 
 \vspace{\fill}
 
