--- a/4T/main.ltx
+++ b/4T/main.ltx
@@ -1,6 +1,7 @@
 
 \documentclass[10pt]{book}
 \usepackage{color}
+\usepackage{graphicx}
 \usepackage{soul}
 \usepackage{titlesec}
 \usepackage[normalem]{ulem}
