Highlight and quote fixes

--- a/4T/ch16.tex
+++ b/4T/ch16.tex
@@ -84,7 +84,7 @@ Woozy with pain, blood loss and shock, Jonah manages to say, ``One down, theirs.
 
 ``Train tracks, the train can pick us up there.''
 
-Jonah makes his way back across the street without getting seen.  {[}\textit{Challenge: Avoid taking stray fire or being spotted 1.  Overcome.}{]}\footnote{\textbf{Suko T }Thanks! \textsubscript{04/06/13 4:31pm}}
+Jonah makes his way back across the street without getting seen.  \hl{{[}\textit{Challenge: Avoid taking stray fire or being spotted 1.  Overcome.}{]}}\footnote{\textbf{Suko T }Thanks! \textsubscript{04/06/13 4:31pm}}
 
 
 
@@ -446,57 +446,48 @@ Oliver: 4
 
 ``Making the wound sexy makes the challenge higher so be careful''
 
-                                - Ion to Rebecca, discussing proposed use of Grim Visage (I think)
+\extraIndent{- Ion to Rebecca, discussing proposed use of Grim Visage (I think)}
 
 
 
 ``Great!  I throw my gun at him!  I mean, not literally, but the bullets in it.''
 
-                                - Rebecca, fighting an armored soldier
+\extraIndent{ - Rebecca, fighting an armored soldier}
 
 
-
+\quotedDialog{
 ``I believe in you!  That's worth nothing, but ....''
 
 ``Spoken like a leader.''
-
-                                - Rebecca (to Hayley) and Adam
+}
+\extraIndent{- Rebecca (to Hayley) and Adam}
 
 
 
 ``Cool: I get a knife!''
 
-                                - Suko, after Hayley was stabbed in the arm
+\extraIndent{                                - Suko, after Hayley was stabbed in the arm}
 
 
-
+\quotedDialog{
 ``Once again, face down in a dead body.''
 
 ``Don't lick it.''
-
+}
 \extraIndent{-Rebecca and Adam (I think?)}
 
 
-
+\quotedDialog{
 ``It's a level 3 challenge to be bathed by Swan.''
 
 ``Can I hit him with my truncheon?''
 
 ``I'd hit that with a truncheon!''
-
-                                - Ion, Rebecca, Adam
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Thanks!, unable to correctly match (exceeded acceptable limit):Expected[Challenge: Avoid taking stray fire or being spotted 1.  Overcome.]
+}
+\extraIndent{- Ion, Rebecca, Adam}
 
 
-\fi
+
 
 \vspace{\fill}
 
