Fixing quotes, highlights, and comments for ch17

--- a/4T/ch17.tex
+++ b/4T/ch17.tex
@@ -91,7 +91,7 @@ Tim says his job isn't that interesting but Hayley asks him to explain and liste
 
 
 
-They continue to talk and as Tim gets increasingly drunk, he is more and more frank about asking Hayley to sleep with him.  Eventually she figures out what he is asking and considers it carefully.  She says that kissing is okay, but no sex, because she doesn't know him well enough yet.  Tim is okay with that compromise and she helps him back to his place.  They make out, Tim gets handsy but Hayley is able to keep all her clothes on\footnote{\textbf{Suko T }I assume.  Because if not, she may have to injure him to keep her scars secret.  And she doesn't want to do that, he seems nice. \textsubscript{03/12/13 1:53am}}+1+1.
+They continue to talk and as Tim gets increasingly drunk, he is more and more frank about asking Hayley to sleep with him.  Eventually she figures out what he is asking and considers it carefully.  She says that kissing is okay, but no sex, because she doesn't know him well enough yet.  Tim is okay with that compromise and she helps him back to his place.  They make out, Tim gets handsy but \hl{Hayley is able to keep all her clothes on}\footnote{\textbf{Suko T }I assume.  Because if not, she may have to injure him to keep her scars secret.  And she doesn't want to do that, he seems nice. \textsubscript{03/12/13 1:53am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{03/16/13 4:22pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{03/21/13 9:29pm}}.
 
 
 
@@ -110,9 +110,9 @@ Jaya tries to cheer Padme up by dropping a wad of water credits on the table but
 
 ``What happened?'' asks Jaya, placing her drink in front of Padme.
 
-Padme sniffles and wails, ``I should have eaten better.  I knew it but I didn't.  You have to eat better.''  Padme looks up at Jaya somewhat accusingly and angrily knocks the 500 to the ground.  Jaya attempts to placate her with more money, but that just angers Padme more.  ``Where were you?  Why aren't you here?'' she yells, getting to her feet.
+Padme sniffles and wails, ``I should have eaten better.  I knew it but I didn't.  You have to eat better.''  Padme looks up at Jaya somewhat accusingly and angrily knocks the 500 to the ground.  Jaya attempts to placate her with more money, but that just angers Padme more.  \hl{``Where were you?  Why aren't you here?'' she yells, getting to her feet.
 
-``I'm working!  Earning money for this family!'' says Jaya, her defensiveness turning to anger.\footnote{\textbf{q.google }In light of how session 18 ends: parts of Jaya's tank experience are starting to come true, and this is one of them. \textsubscript{04/06/13 1:32pm}}\footnote{$\rightarrow$\textbf{q.google }Which is interesting because, for Oliver and Jonah, the tank experience combined parts of things which already came true, in their pasts. \textsubscript{04/06/13 1:33pm}}
+``I'm working!  Earning money for this family!'' says Jaya, her defensiveness turning to anger.}\footnote{\textbf{q.google }In light of how session 18 ends: parts of Jaya's tank experience are starting to come true, and this is one of them. \textsubscript{04/06/13 1:32pm}}\footnote{$\rightarrow$\textbf{q.google }Which is interesting because, for Oliver and Jonah, the tank experience combined parts of things which already came true, in their pasts. \textsubscript{04/06/13 1:33pm}}
 
 ``And getting shot at! Last time you lost most of your ear - what's next?  I can't have someone else dying on me!'' At that, Padme's anger shifts back to misery and she starts crying again.
 
@@ -238,7 +238,7 @@ Jonah meets up with one of his contacts, 'Zhok (Ashok).   'Zhok is a merchant an
 
 ``Lots are going to New Station and the Plantations.''
 
-``New Station...'', says Jonah, somewhat distantly\footnote{\textbf{q.google }The idea that one would go live there is still barely registering in his mind.  But see below. \textsubscript{04/06/13 1:48pm}}.
+``New Station...'', says Jonah, \hl{somewhat distantly}\footnote{\textbf{q.google }The idea that one would go live there is still barely registering in his mind.  But see below. \textsubscript{04/06/13 1:48pm}}.
 
 ``Yeah.  Listen, there's something I want to tell you about.  Not sure if it's my business exactly but, well, it may affect our business, so....''
 
@@ -303,7 +303,7 @@ Jaya frantically tries to remember what she wrote down in her report.
 
 ``Uhhhhh.... he called me a name?'' says Jaya tentatively.  ``He called me a.... tetris?''
 
-``Could it have been 'Tertius'?''``It could have been that, but it really sounded like \hl{tetris}\footnote{\textbf{q.google }Maybe we are in a video game, but I didn't think it was Tetris.... \textsubscript{04/06/13 2:07pm}}\footnote{$\rightarrow$\textbf{Suko T }I rather love that she insisted that it was Tetris after Morgan corrected her.  It's so Jaya and also very funny OOG. \textsubscript{04/06/13 4:25pm}}+1.''
+``Could it have been 'Tertius'?''``It could have been that, but it really sounded like \hl{tetris}\footnote{\textbf{q.google }Maybe we are in a video game, but I didn't think it was Tetris.... \textsubscript{04/06/13 2:07pm}}\footnote{$\rightarrow$\textbf{Suko T }I rather love that she insisted that it was Tetris after Morgan corrected her.  It's so Jaya and also very funny OOG. \textsubscript{04/06/13 4:25pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:23am}}.''
 
 ``Hmm.  Now onto the other matter.  You have been cleared for active duty but are you ready?  You seem...distracted.'' says Morgan pointedly looking at Jaya's new bruises and cuts.
 
@@ -567,32 +567,9 @@ Oliver 1
 
 ``Blood is just weakness leaving the body.''
 
-        -Rebecca
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: I assume.  Because if not, she may have to injure him to keep her scars secret.  And she doesn't want to do that, he seems nice. because:GivenExpectedHayley is able to keep all her clothes onHayley is more than able to manage to keep all her clothes on and the making out PG-13
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{\textbf{Suko T }I assume.  Because if not, she may have to injure him to keep her scars secret.  And she doesn't want to do that, he seems nice. \textsubscript{03/12/13 1:53am}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:23am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{03/16/13 4:22pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{03/21/13 9:29pm}} 
-
-	Unable to understand footnote +1, too many options & none that matched +1. Optional comment markups: \footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:23am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{03/16/13 4:22pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{03/21/13 9:29pm}} 
-
-	Unable to highlight for footnote: In light of how session 18 ends: parts of Jaya's tank experience are starting to come true, and this is one of them., unable to correctly match (exceeded acceptable limit):Expected“Where were you?  Why aren’t you here?” she yells, getting to her feet.
-“I’m working!  Earning money for this family!” says Jaya, her defensiveness turning to anger.
-
-	Unable to highlight for footnote: The idea that one would go live there is still barely registering in his mind.  But see below. because:GivenExpectedsomewhat distantlysomewhat strangely
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Suko T }I rather love that she insisted that it was Tetris after Morgan corrected her.  It's so Jaya and also very funny OOG. \textsubscript{04/06/13 4:25pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:23am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{03/16/13 4:22pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{03/21/13 9:29pm}} 
-
-
-\fi
-
+\extraIndent{ -Rebecca}
 \vspace{\fill}
+
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
