Comment (stupid +1s) and quote fixes for ch18

--- a/4T/ch18.tex
+++ b/4T/ch18.tex
@@ -317,7 +317,7 @@ More red paper starts appearing and they start moving faster and faster.  {[}\te
 
 
 
-\textit{{[}Challenge 4: }\textit{\hl{Don't die from paper cuts}}\footnote{\textbf{q.google } \textsubscript{04/06/13 3:24pm}}+1\textit{ --\textgreater  Matched{]}}  The paper targets are flying at them extremely fast at this point.  It is now very hard to see the red targets behind the flurry of yellow and orange.  Jaya's light goes off, indicating she's died.  She fires off the remaining rounds in her pistol and throws the pistol at one of the targets, ripping it from the track.  
+\textit{{[}Challenge 4: }\textit{\hl{Don't die from paper cuts}}\footnote{\textbf{q.google }  ROFL \textsubscript{04/06/13 3:24pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:31am}}\textit{ --\textgreater  Matched{]}}  The paper targets are flying at them extremely fast at this point.  It is now very hard to see the red targets behind the flurry of yellow and orange.  Jaya's light goes off, indicating she's died.  She fires off the remaining rounds in her pistol and throws the pistol at one of the targets, ripping it from the track.  
 
 Oliver grabs her arm and shoves her toward the door.
 
@@ -339,7 +339,7 @@ Dr. Gerhauser leads Jonah to another unfamiliar room.  In the room is just a cha
 
 What he would have thought if he had more time (and less pain): ``There must be something else to this.  They \_know\_ Hayley will always follow orders.  What's the catch?''
 
-What he should have thought: ``Oh @\$\%!.  This is going to \_hurt\_.'' \textsubscript{04/06/13 3:31pm}}+1.  This is going to be somewhat painful for you, but not life threatening.  Do you have any questions?'' 
+What he should have thought: ``Oh @\$\%!.  This is going to \_hurt\_.'' \textsubscript{04/06/13 3:31pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{04/06/13 4:42pm}}.  This is going to be somewhat painful for you, but not life threatening.  Do you have any questions?'' 
 
 ``What exactly is this?''
 
@@ -631,25 +631,9 @@ Oliver 1
 
 ``Negotiation requires words.  I just use my face.''
 
-        -Rebecca
+\extraIndent{-Rebecca}
 
 
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{\textbf{q.google } \textsubscript{04/06/13 3:24pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{04/08/13 7:23pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{04/06/13 4:42pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:31am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/26/14 11:05pm}} 
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{\textbf{q.google }What he thinks: "Are you fucking _kidding_?"
-
-What he would have thought if he had more time (and less pain): "There must be something else to this.  They _know_ Hayley will always follow orders.  What's the catch?"
-
-What he should have thought: "Oh @$%!.  This is going to _hurt_." \textsubscript{04/06/13 3:31pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{04/08/13 7:23pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{04/06/13 4:42pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:31am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/26/14 11:05pm}} 
-
-
-\fi
 
 \vspace{\fill}
 
