Highlight and quote cleanups for ch19

--- a/4T/ch19.tex
+++ b/4T/ch19.tex
@@ -57,7 +57,7 @@ Jaya says something noncommittal and keeps edging toward the door.  She bolts as
 
 \sceneHeadline{Jonah and Trenton}
 
-Jonah goes to Trenton's lab.  Rook is there talking with Trenton.  ``She left the station with two Mark 2's and two of those.....???\footnote{\textbf{Suko T }This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. \textsubscript{04/09/13 11:18pm}}''  ``You should ask Jari about that.'' ``Anything up to and including rifles''\footnote{\textbf{Suko T }This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. \textsubscript{04/09/13 11:18pm}}  
+Jonah goes to Trenton's lab.  Rook is there talking with Trenton.  ``She left the station with two Mark 2's and two of those.....\hl{???}\footnote{\textbf{Suko T }This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. \textsubscript{04/09/13 11:18pm}}''  ``You should ask Jari about that.'' ``Anything up to and including rifles''\footnote{\textbf{Suko T }This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. \textsubscript{04/09/13 11:18pm}}  
 
 Rook asks Jonah, ``Can I help you?''  At Jonah's no, Rook leaves the lab.
 
@@ -779,39 +779,23 @@ Get Dr. Gerhauser to treat Jonah more like a colleague and give up more informat
 
  ``I don't want to shoot anyone.  But the good news is if there \textit{was} shooting, I'm a medic.''
 
-        - Jonah
+\extraIndent{        - Jonah}
 
 ``Let me get this straight, you are trying to turn us into \textit{radios}?''
 
-        - Jonah
+\extraIndent{        - Jonah}
 
 
 
 ``Let's just say that the device only fits over certain shapes of heads.  And you all have the same shape of head in this analogy that I'm making up.''
 
-        - Trenton
+\extraIndent{        - Trenton}
 
 
 
 ``When all else fails, try leadership.''
 
-        - Adam
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can., unable to correctly match (exceeded acceptable limit):Expected???  You should ask Jari about that.”
-“Anything up to and including rifles”
-
-	Unable to highlight for footnote: This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. because:GivenExpected“You should ask Jari about that.” “Anything up to and including rifles”???  You should ask Jari about that.”
-“Anything up to and including rifles”
-
-
-\fi
+\extraIndent{        - Adam}
 
 \vspace{\fill}
 
