Fixing highlight and quotes for ch19

--- a/4T/ch20.tex
+++ b/4T/ch20.tex
@@ -162,7 +162,7 @@ Jonah asks if the soldiers that we fought in Nicklepan were from Anglia.  Morgan
 
 ``That's where I come in,'' says Trenton, opening the case next to him.  He pulls out a pistol and hands it to Hayley, then walks over to Jaya and hands her the other one.  Jaya looks thrilled and has to be warned repeatedly not to wave it around. 
 
-Trenton describes the new weapons.  ``These are Gauss pistols.\footnote{\textbf{Suko T }Insert description of pistols here. \textsubscript{05/07/13 11:57pm}}  They have ten times the stopping power of your usual pistols, but they have quite a kick.  If they aren't working, you may need to check the battery.''
+Trenton describes the new weapons.  ``\hl{These are Gauss pistols.}\footnote{\textbf{Suko T }Insert description of pistols here. \textsubscript{05/07/13 11:57pm}}  They have ten times the stopping power of your usual pistols, but they have quite a kick.  If they aren't working, you may need to check the battery.''
 
 Jonah asks, ``Have you fired them?''
 
@@ -677,25 +677,14 @@ Oliver: 1
 
 ``You can take my pants.  You can take my brain.  But don't take my gun.''
 
-        - Adam
+\extraIndent{        - Adam}
 
 
 
 ``Let me know if I have any thoughts.''
 
-        -Rebecca
+\extraIndent{ -Rebecca}
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Insert description of pistols here. because:GivenExpectedThese are Gauss pistols.These are Gaussian pistols.
-
-
-\fi
 
 \vspace{\fill}
 
