--- a/4T/ch1.tex
+++ b/4T/ch1.tex
@@ -2,18 +2,10 @@
 \chapter{\textbf{SAC-09, Intro} }
 
 
+\subChapterTitle{``PG1 Assemble!''}
 
 
-\begin{center}
- {\LARGE \textbf{``PG1 Assemble!''} } 
-\end{center}
-
-
-
-
-\textit{Notes:} \hl{Missing}\footnote{\textbf{Rebecca S. }These notes were hand written. They have never been recovered. \textsubscript{08/21/15 9:20am}}
-
-\textit{Date:} June 7th, 2012
+\deets{\hl{Missing}\footnote{\textbf{Rebecca S. }These notes were hand written. They have never been recovered. \textsubscript{08/21/15 9:20am}}}{June 7th, 2012}
 
 
 
