--- a/4T/ch10.tex
+++ b/4T/ch10.tex
@@ -3,12 +3,9 @@
 
 
 
+\subChapterTitle{}
 
-
-
-\textit{Notes:} Suko and Adam
-
-\textit{Date:} November 8th, 2012
+\deets{Suko and Adam}{November 8th, 2012}
 
 
 
