--- a/4T/ch11.tex
+++ b/4T/ch11.tex
@@ -3,17 +3,9 @@
 
 
 
+\subChapterTitle{``Didn't Even Have Nails in Them''} 
 
-\begin{center}
- {\LARGE \textbf{``Didn't Even Have Nails in Them''} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} November 28th, 2012
+\deets{Suko}{November 28th, 2012}
 
 
 
