--- a/4T/ch13.tex
+++ b/4T/ch13.tex
@@ -3,19 +3,11 @@
 
 
 
+\subChapterTitle{``Is this a kissing book?''} 
 
-\begin{center}
- {\LARGE \textbf{``Is this a kissing book?''} } 
-\end{center}
+\deets{Suko}{\hl{December 27th, 2012}\footnote{\textbf{q.google }If there is a theme to this session for me, it's that the whole is less than the sum of its parts.  There is valuable information trapped in pockets.  All four of the team members learn useful concrete things from their contacts: Jaya from Morgan and Rook, Oliver from Dr. Gerhauser and Jaya, Jonah from Trenton, Hayley from Morgan.  None of them share it with the others (though Hayley clearly intends to).  The team members, for all of their flaws, are each quite competent in their own way (point buys help! ;) but they are not really a team.
 
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} \hl{December 27th, 2012}\footnote{\textbf{q.google }If there is a theme to this session for me, it's that the whole is less than the sum of its parts.  There is valuable information trapped in pockets.  All four of the team members learn useful concrete things from their contacts: Jaya from Morgan and Rook, Oliver from Dr. Gerhauser and Jaya, Jonah from Trenton, Hayley from Morgan.  None of them share it with the others (though Hayley clearly intends to).  The team members, for all of their flaws, are each quite competent in their own way (point buys help! ;) but they are not really a team.
-
-Yet. \textsubscript{01/27/13 3:34pm}}\footnote{$\rightarrow$\textbf{Suko T }This session and the following session.  We really really need to have a team chat at some point... \textsubscript{01/27/13 11:20pm}}
+Yet. \textsubscript{01/27/13 3:34pm}}\footnote{$\rightarrow$\textbf{Suko T }This session and the following session.  We really really need to have a team chat at some point... \textsubscript{01/27/13 11:20pm}}}
 
 
 
