--- a/4T/ch14.tex
+++ b/4T/ch14.tex
@@ -4,11 +4,9 @@
 
 
 
+\subChapterTitle{``Swan Lake''}
 
-
-\textit{Notes:} Suko \& Rebecca
-
-\textit{Date:} January 23rd, 2013
+\deets{Suko \& Rebecca}{January 23rd, 2013}
 
 
 
