--- a/4T/ch15.tex
+++ b/4T/ch15.tex
@@ -4,11 +4,9 @@
 
 
 
+\subChapterTitle{``Nicklepan and The Bad Road''}
 
-
-\textit{Notes:} Suko
-
-\textit{Date:} January 29th, 2013
+\deets{Suko}{January 29th, 2013}
 
 
 
