--- a/4T/ch16.tex
+++ b/4T/ch16.tex
@@ -3,12 +3,10 @@
 
 
 
+\subChapterTitle{``I'll Let This One Live''}
 
 
-
-\textit{Notes:} Suko
-
-\textit{Date:} February 20th, 2013
+\deets{Suko}{February 20th, 2013}
 
 
 
