--- a/4T/ch17.tex
+++ b/4T/ch17.tex
@@ -4,11 +4,9 @@
 
 
 
+\subChapterTitle{``We Call Him Tim''}
 
-
-\textit{Notes:} Suko
-
-\textit{Date:} March 11th, 2013
+\deets{Suko}{March 11th, 2013}
 
 
 
