--- a/4T/ch18.tex
+++ b/4T/ch18.tex
@@ -1,14 +1,13 @@
 \setcounter{chapter}{ 17 }
-\chapter{\textbf{``Training Day'' (Backlash 2/2)} }
+\chapter{\textbf{``Training Day'' } }
 
 
 
 
 
+\subChapterTitle{(Backlash 2/2)}
 
-\textit{Notes:} Suko
-
-\textit{Date:} April 3rd, 2013
+\deets{Suko}{April 3rd, 2013}
 
 
 
