--- a/4T/ch19.tex
+++ b/4T/ch19.tex
@@ -4,16 +4,9 @@
 
 
 
-\begin{center}
- {\LARGE \textbf{(Backlash 3/2 \& Shore Leave)} } 
-\end{center}
+\subChapterTitle{(Backlash 3/2 \& Shore Leave)}
 
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} April 8th, 2013
+\deets{Suko}{April 8th, 2013}
 
 
 
