--- a/4T/ch2.tex
+++ b/4T/ch2.tex
@@ -4,16 +4,9 @@
 
 
 
-\begin{center}
- {\LARGE \textbf{``His August Person, The Provider Poseidon''} } 
-\end{center}
+\subChapterTitle{``His August Person, The Provider Poseidon''}
 
-
-
-
-Notes: Suko
-
-Date: June 20, 2012
+\deets{Suko}{June 20, 2012}
 
 \noindent\hrulefill
 
