--- a/4T/ch20.tex
+++ b/4T/ch20.tex
@@ -4,16 +4,9 @@
 
 
 
-\begin{center}
- {\LARGE \textbf{(Borrough Station ver 1.0)} } 
-\end{center}
+\subChapterTitle{(Borrough Station ver 1.0)}
 
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} May 6th, 2013
+\deets{Suko}{May 6th, 2013}
 
 
 
