--- a/4T/ch3.tex
+++ b/4T/ch3.tex
@@ -3,12 +3,9 @@
 
 
 
+\subChapterTitle{``Drowning in Pudding''} 
 
-
-
-Notes: Ion
-
-Date: July 12, 2012
+\deets{Ion}{July 12, 2012}
 
 \noindent\hrulefill
 
