--- a/4T/ch4.tex
+++ b/4T/ch4.tex
@@ -2,13 +2,9 @@
 \chapter{\textbf{Cardoza Station, Part 2} }
 
 
+\subChapterTitle{``Ire of the Orc of Anglia''} 
 
-
-
-
-Notes: Rebecca
-
-Date: July 24, 2012
+\deets{Rebecca}{July 24, 2012}
 
 \noindent\hrulefill
 
