--- a/4T/ch5.tex
+++ b/4T/ch5.tex
@@ -4,11 +4,9 @@
 
 
 
+\subChapterTitle{``Shore Leave''} 
 
-
-\textbf{Notes}: Suko
-
-\textbf{Date}: August 13th, 2012
+\deets{Suko}{August 13th, 2012}
 
 
 
