--- a/4T/ch6.tex
+++ b/4T/ch6.tex
@@ -1,16 +1,9 @@
 \setcounter{chapter}{ 5 }
 \chapter{GC Station, Part 1 }
 
-\begin{center}
- {\LARGE \textbf{``The Water Rats''} } 
-\end{center}
+\subChapterTitle{``The Water Rats''} 
 
-
-
-
-Notes: Ion
-
-Date: Aug. 24, 2012
+\deets{Ion}{Aug. 24, 2012}
 
 
 
