--- a/4T/ch7.tex
+++ b/4T/ch7.tex
@@ -1,19 +1,9 @@
 \setcounter{chapter}{ 6 }
 \chapter{\textbf{GC Station, Part 2} }
 
+\subChapterTitle{``Caduceus''} 
 
-
-
-\begin{center}
- {\LARGE \textbf{``Caduceus''} } 
-\end{center}
-
-
-
-
-Notes: Suko
-
-Date: Sept 4th, 2012
+\deets{Suko}{Sept 4th, 2012}
 
 
 
