--- a/4T/ch8.tex
+++ b/4T/ch8.tex
@@ -2,18 +2,9 @@
 \chapter{\textbf{Terminus} }
 
 
+\subChapterTitle{``a.k.a. Jaya's Terrible Horrible No Good Very Bad Day''} 
 
-
-\begin{center}
- {\LARGE \textbf{a.k.a. Jaya's Terrible Horrible No Good Very Bad Day} } 
-\end{center}
-
-
-
-
-Notes: Suko
-
-Date: Oct 19th, 2012
+\deets{Suko}{Oct 19th, 2012}
 
 Update (first cistern scene): Nov 1st, 2012
 
