--- a/4T/ch9.tex
+++ b/4T/ch9.tex
@@ -2,13 +2,9 @@
 \chapter{\textbf{SAC-09, Interlude} }
 
 
+\subChapterTitle{``20 Questions''}
 
-
-
-
-\textit{Notes:} Suko and Ion
-
-\textit{Date:} November 1st, 2012
+\deets{Suko and Ion}{November 1st, 2012}
 
 
 
